fixed spacing

--- a/css/style-a.css
+++ b/css/style-a.css
@@ -12,7 +12,7 @@ body {
 h1 {
   /*color: #F4810A;*/
   color: lightgray;
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 10px;
 }
 h2 {
@@ -24,7 +24,7 @@ h2 {
 
 h3 {
   color: white;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
 
 #container {
